testdata/baselines/reference/compiler/declareGlobalLuauStyle.symbols
//// [tests/cases/compiler/declareGlobalLuauStyle.tlua] ////

=== globals.d.tlua ===
declare version: string;
>version : Symbol(version, Decl(globals.d.tlua, 0, 7))

declare limits: { min: number, max: number };
>limits : Symbol(limits, Decl(globals.d.tlua, 1, 7))
>min : Symbol(min, Decl(globals.d.tlua, 1, 17))
>max : Symbol(max, Decl(globals.d.tlua, 1, 30))

=== main.tlua ===
local n: number = limits.min;
>n : Symbol(n, Decl(main.tlua, 0, 5))
>limits.min : Symbol(min, Decl(globals.d.tlua, 1, 17))
>limits : Symbol(limits, Decl(globals.d.tlua, 1, 7))
>min : Symbol(min, Decl(globals.d.tlua, 1, 17))

local s: string = version;
>s : Symbol(s, Decl(main.tlua, 1, 5))
>version : Symbol(version, Decl(globals.d.tlua, 0, 7))

version = "overwritten"; // error: constant
>version : Symbol(version, Decl(globals.d.tlua, 0, 7))

limits = { min = 0, max = 1 }; // error: constant
>limits : Symbol(limits, Decl(globals.d.tlua, 1, 7))
>min : Symbol(min, Decl(main.tlua, 3, 10))
>max : Symbol(max, Decl(main.tlua, 3, 19))

local bad: boolean = version; // error: string not boolean
>bad : Symbol(bad, Decl(main.tlua, 4, 5))
>version : Symbol(version, Decl(globals.d.tlua, 0, 7))

